--- a/css/red.css
+++ b/css/red.css
@@ -9,3 +9,13 @@
 .post .button-more{
     background: #CA3413;
 }
+
+form input[type="submit"] {
+    width: 70px;
+    background: #CA3413;
+    padding: 10px;
+    /* border: 1px solid #ccc; */
+    color: #FFF;
+    cursor: pointer;
+    border: none;
+}
